k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: opentelemetry
spec:
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
